[package]
name = "quinnet-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_replicon = { version = "0.36", default-features = false }
bevy_quinnet = { version = "0.19.0", default-features = false }
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_replicon_quinnet = "0.15.0"
clap = { version = "4.5.51", features = ["derive"] }
