[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
bevy_replicon_quinnet = { version = "0.15.0", default-features = false }
bevy = { version = "0.17", features = ["serialize"] }
bevy-panic-handler = "6.0.0"
bevy_asset_loader = "0.24.0-rc.1"
bevy_enhanced_input = "0.19.3"
bevy_quinnet = { version = "0.19.0", default-features = false }
bevy_replicon = "0.36"
bevy_rand = { version = "0.12.1", features = ["wyrand"] }
rand = "0.9.2"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
ctrlc = "3.5.1"
bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"

# Internal Crates

shared = { path = "./crates/shared" }


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
