[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_replicon_quinnet = { workspace = true, features = [
    "client",
    "shared-client-id",
] }
bevy_quinnet = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy-panic-handler = { workspace = true }
bevy_replicon = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"]
